Troubleshoot images not loading on Vercel deployment

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,4 +3,4 @@ $mainColor: #ffbc00;
 $lightColor: #f4f4f4;
 $mediumColor: #ccc;
 $darkColor: #333;
-$backgroundImage: url(../img/showcase.jpg);
+$backgroundImage: url(../img/other/showcase.jpg);
